--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,20 @@
-body{
-    background: #f4f9fc;
+* {
+  box-sizing: border-box;
 }
 
-.wrapper{
-    width: 90%;
-    margin: 0 auto;
-    background: #fff;
-    padding: 20px;
+body {
+  background: #f4f9fc;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 100vw;
+  margin: 0;
+  background: #fff;
+  padding: 20px;
 }
 
 
@@ -93,6 +101,15 @@ body{
 @media (max-width: 768px) {
   .cabinet-container {
     flex-direction: column;
+    padding: 0;
+    margin: 0;
+  }
+
+  .wrapper {
+    width: 100%;
+    max-width: 100vw;
+    padding: 0 2.5vw;
+    margin: 0;
   }
   
   .sidebar {
@@ -110,6 +127,7 @@ body{
   
   .main-content {
     margin-top: 1rem;
+    padding: 0;
   }
   
   .mobile-menu-button {
