--- a/src/cabinets/StudentFunctions/StudentAttendance.css
+++ b/src/cabinets/StudentFunctions/StudentAttendance.css
@@ -100,6 +100,11 @@
     cursor: default;
 }
 
+.day.valid {
+    background-color: #fff3cd;
+    color: #856404;
+}
+
 .day.empty {
     background-color: transparent;
 }
